--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
     "name": "mestore",
     "version": "0.1.0",
     "private": true,
-    "homepage": "http://CodeFocusChannel.github.io/mestore",
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "chart.js": "^3.5.0",
-        "gh-pages": "^3.2.3",
         "node-sass": "^6.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -16,8 +14,6 @@
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -40,5 +36,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "devDependencies": {}
 }
